Fix: github-update failed

--- a/.github/workflows/github-update.yml
+++ b/.github/workflows/github-update.yml
@@ -10,22 +10,22 @@ jobs:
     steps:
       - uses: TG908/fork-sync@v1.8
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          owner: LmeSzinc
+          owner: MengNianxiaoyao
+          token: ${{ secrets.PERSONAL_TOKEN }}
           head: master
           base: master
           merge_method: merge
       - uses: TG908/fork-sync@v1.8
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          owner: LmeSzinc
+          owner: MengNianxiaoyao
+          token: ${{ secrets.PERSONAL_TOKEN }}
           head: master
           base: dashboard
           merge_method: merge
       - uses: TG908/fork-sync@v1.8
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          owner: LmeSzinc
+          owner: MengNianxiaoyao
+          token: ${{ secrets.PERSONAL_TOKEN }}
           head: master
           base: mydev
           merge_method: merge
