--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -345,3 +345,17 @@ Tool:
       - AzurLaneUncensored
     GameManager:
       - GameManager
+
+Dashboard:
+  - Oil
+  - Coin
+  - Gem
+  - Pt
+  - Cube
+  - ActionPoint
+  - YellowCoin
+  - PurpleCoin
+  - Core
+  - Medal
+  - Merit
+  - GuildCoin
