--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -346,6 +346,8 @@ Tool:
     GameManager:
       - GameManager
 
+# ==================== Dashboard ====================
+
 Dashboard:
   - Oil
   - Coin
