--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -368,6 +368,11 @@ Exercise:
     SuccessInterval: 30
     FailureInterval: 30
     ServerUpdate: 00:00, 12:00, 18:00
+DashboardUpdate:
+  Scheduler:
+    SuccessInterval: 30
+    FailureInterval: 30
+    ServerUpdate: 00:00
 
 # ==================== Opsi ====================
 
