--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -270,6 +270,9 @@ DailyMission:
       - DataKey
       - Mail
       - SupplyPack
+    DashboardUpdate:
+      - Scheduler
+      - DashboardUpdate
 
 # ==================== Opsi ====================
 
