--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -52,8 +52,8 @@ MainNormal:
 MainHard:
   Campaign:
     Event: campaign_main
-    StopCondition:
-      RunCount: 3
+  StopCondition:
+    RunCount: 3
 Main:
   Campaign:
     Event: campaign_main
@@ -439,7 +439,7 @@ OpsiHazard1Leveling:
   OpsiFleet:
     Submarine: false
 
-# ==================== Dashboard ====================
+# ==================== Tools ====================
 
 GameManager:
   GGHandler:
@@ -460,6 +460,7 @@ GameManager:
     Ash: 16500
 
 # ==================== Dashboard ====================
+
 Dashboard:
   Oil:
     Color: ^000000
