--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -245,6 +245,9 @@ DailyMission:
     Hard:
       - Scheduler
       - Hard
+      - Fleet
+      - Emotion
+      - EnemyPriority
     Exercise:
       - Scheduler
       - Exercise
@@ -348,19 +351,23 @@ Tool:
       - AzurLaneUncensored
     GameManager:
       - GameManager
+      - GGHandler
+      - PowerLimit
 
 # ==================== Dashboard ====================
 
 Dashboard:
-  - Oil
-  - Coin
-  - Gem
-  - Pt
-  - Cube
-  - ActionPoint
-  - YellowCoin
-  - PurpleCoin
-  - Core
-  - Medal
-  - Merit
-  - GuildCoin
+  tasks:
+    Dashboard:
+      - Oil
+      - Coin
+      - Gem
+      - Pt
+      - Cube
+      - ActionPoint
+      - YellowCoin
+      - PurpleCoin
+      - Core
+      - Medal
+      - Merit
+      - GuildCoin
