--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -357,6 +357,7 @@ Tool:
 # ==================== Dashboard ====================
 
 Dashboard:
+  page: 'dashboard'
   tasks:
     Dashboard:
       - Oil
