--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -464,7 +464,7 @@ GameManager:
 
 # ==================== Dashboard ====================
 
-Dashboard:
+Resource:
   Oil:
     Color: ^000000
   Coin:
