--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -591,6 +591,7 @@ Exercise:
   OpponentRefreshRecord: 2023-01-01 00:00:00
 
 DashboardUpdate:
+  Raid: false
   Update: 
     value: all
     option: [ all, main ]
