--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -591,6 +591,9 @@ Exercise:
   OpponentRefreshRecord: 2023-01-01 00:00:00
 
 DashboardUpdate:
+  Event:
+    value: event
+    option: [ event, raid]
   Update: 
     value: all
     option: [ all, main ]
