--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -688,7 +688,9 @@ Benchmark:
     option: [ screenshot_click, screenshot, click ]
 AzurLaneUncensored:
   Repository:
-    value: https://gitee.com/LmeSzinc/AzurLaneUncensored
+    type: textarea
+    mode: yaml
+    value: 'https://gitee.com/LmeSzinc/AzurLaneUncensored'
     display: disabled
 GameManager:
   AutoRestart: true
