--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -289,25 +289,25 @@ CoalitionSp:
 
 Reward:
   Scheduler:
-    Enable:
-      value: true
-      type: lock
+    # Enable:
+    #   value: true
+    #   type: lock
     SuccessInterval: 120-240
     FailureInterval: 120-240
     ServerUpdate: 00:00
 Commission:
   Scheduler:
-    Enable:
-      value: true
-      type: lock
+    # Enable:
+    #   value: true
+    #   type: lock
     SuccessInterval: 30-60
     FailureInterval: 30-60
     ServerUpdate: 00:00
 Research:
   Scheduler:
-    Enable:
-      value: true
-      type: lock
+    # Enable:
+    #   value: true
+    #   type: lock
     SuccessInterval: 30-60
     FailureInterval: 30-60
     ServerUpdate: 00:00
