--- a/module/config/argument/default.yaml
+++ b/module/config/argument/default.yaml
@@ -56,6 +56,9 @@ Reward:
 Freebies:
   Scheduler:
     Enable: true
+DashboardUpdate:
+  Scheduler:
+    Enable: true
 
 # ==================== DailyMission ====================
 
