--- a/module/config/argument/gui.yaml
+++ b/module/config/argument/gui.yaml
@@ -90,6 +90,27 @@ AddAlas:
   FileExist:
   InvalidChar:
   InvalidPrefixTemplate:
+  Manage:
+
+AppManage:
+  PageTitle:
+  TitleNew:
+  NewName:
+  CopyFrom:
+  NameExist:
+  InvalidChar:
+  InvalidPrefixTemplate:
+  Back:
+  New:
+  Import:
+  Export:
+  Delete:
+  OverrideWarning:
+  ImportSuccess:
+  NewSuccess:
+  Name:
+  Mod:
+  Actions:
 
 Update:
   UpToDate:
@@ -121,3 +142,5 @@ Remote:
 Text:
   InvalidFeedBack:
   Clear:
+  EnterPassword:
+  ChooseFile:
