--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -722,6 +722,7 @@ PowerLimit:
   Exercise: 16500
   Raid: 16500
   Ash: 16500
+  Coalition: 16500
 
 # ==================== Dashboard ====================
 
