--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -725,6 +725,7 @@ GGHandler:
   GGLuapathRecord: false
   GGPackageName: com.
   GGWaitTime: 5
+  GGLowLimit: 500
   DisabledTask:
     value: disable_all_dangerous_task
     option: [ disable_guild_and_dangerous, disable_all_dangerous_task, disable_meta_and_exercise, disable_exercise, enable_all ]
