emotion control for GF base on emotion calculation

--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -52,6 +52,14 @@ GemsFarming:
       option: [ sub_standby, ]
       option_bold: [ sub_standby, ]
     DistanceToBoss: '2_grid_to_boss'
+  Emotion:
+    Mode: calculate
+    Fleet1Control: prevent_red_face
+    Fleet1Recover: not_in_dormitory
+    Fleet1Oath: false
+    Fleet2Control: prevent_red_face
+    Fleet2Recover: not_in_dormitory
+    Fleet2Oath: false
 
 # ==================== Event ====================
 
