--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -62,6 +62,7 @@ Farm:
       - StopCondition
       - Fleet
       - Submarine
+      - Emotion
 
 # ==================== Event ====================
 
