--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -461,6 +461,7 @@ GameManager:
   GGHandler:
     GGMethod:
       value: screenshot
+      option_bold: screenshot
       display: disabled
     RestartEverytime:
       value: true
