--- a/module/config/argument/default.yaml
+++ b/module/config/argument/default.yaml
@@ -4,6 +4,10 @@
 
 # ==================== Alas ====================
 
+Restart:
+  Scheduler:
+    Enable: true
+
 # ==================== Farm ====================
 
 # ==================== Event ====================
@@ -30,30 +34,8 @@ EventD:
 Commission:
   Scheduler:
     Enable: true
-Tactical:
-  Scheduler:
-    Enable: true
-Research:
-  Scheduler:
-    Enable: true
-Dorm:
-  Scheduler:
-    Enable: true
-Meowfficer:
-  Scheduler:
-    Enable: true
-Guild:
-  Scheduler:
-    Enable: true
-Reward:
-  Scheduler:
-    Enable: true
 
 # ==================== DailyReward ====================
-
-Freebies:
-  Scheduler:
-    Enable: true
 
 # ==================== DailyMission ====================
 
