--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -656,7 +656,7 @@ OpsiGeneral:
 OpsiAshBeacon:
   AttackMode:
     value: current
-    option: [ current, current_dossier ]
+    option: [ current, current_dossier, dossier ]
   OneHitMode: true
   DossierAutoAttackMode: false
   RequestAssist: true
