add option to solve scanning device in CL1

--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -716,6 +716,7 @@ OpsiHazard1Leveling:
   TargetZone:
     value: 0
     option: [ 0, 44, 22 ]
+  SolveScanningDevice: false
 
 # ==================== Tools ====================
 
