--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -293,31 +293,31 @@ CoalitionSp:
 
 Reward:
   Scheduler:
-    # Enable:
-    #   type: lock
-    #   value: true
-    #   option: [ true, ]
-    #   option_bold: [ true, ]
+    Enable:
+      type: lock
+      value: true
+      option: [ true, ]
+      option_bold: [ true, ]
     SuccessInterval: 120-240
     FailureInterval: 120-240
     ServerUpdate: 00:00
 Commission:
   Scheduler:
-    # Enable:
-    #   type: lock
-    #   value: true
-    #   option: [ true, ]
-    #   option_bold: [ true, ]
+    Enable:
+      type: lock
+      value: true
+      option: [ true, ]
+      option_bold: [ true, ]
     SuccessInterval: 30-60
     FailureInterval: 30-60
     ServerUpdate: 00:00
 Research:
   Scheduler:
-    # Enable:
-    #   type: lock
-    #   value: true
-    #   option: [ true, ]
-    #   option_bold: [ true, ]
+    Enable:
+      type: lock
+      value: true
+      option: [ true, ]
+      option_bold: [ true, ]
     SuccessInterval: 30-60
     FailureInterval: 30-60
     ServerUpdate: 00:00
