--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -760,7 +760,12 @@ GGHandler:
   GGLowLimit: 500
   DisabledTask:
     value: disable_all_dangerous_task
-    option: [ disable_guild_and_dangerous, disable_all_dangerous_task, disable_meta_and_exercise, disable_exercise, enable_all ]
+    option:
+      - disable_guild_and_dangerous
+      - disable_all_dangerous_task
+      - disable_meta_and_exercise
+      - disable_exercise
+      - enable_all
 PowerLimit:
   Exercise: 16500
   Raid: 16500
