--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -636,9 +636,10 @@ Exercise:
   OpponentRefreshRecord: 2023-01-01 00:00:00
 
 DashboardUpdate:
-  Update: 
+  Update:
     value: all
     option: [ all, main ]
+  NewUi: false
 
 # ==================== Opsi ====================
 
