--- a/module/config/argument/gui.yaml
+++ b/module/config/argument/gui.yaml
@@ -64,12 +64,12 @@ Overview:
   NoTask:
 
 Dashboard:
-  SecondsAgo:
+  TimeError:
+  JustNow:
   MinutesAgo:
   HoursAgo:
   DaysAgo:
-  MonthsAgo:
-  YearsAgo:
+  LongTimeAgo:
   NoData:
   Oil:
   Coin:
