refactor: dashboard datetime

--- a/module/config/argument/gui.yaml
+++ b/module/config/argument/gui.yaml
@@ -56,12 +56,13 @@ Overview:
   NoTask:
 
 Dashboard:
-  SecondsAgo:
+  TimeError:
+  JustNow:
   MinutesAgo:
   HoursAgo:
   DaysAgo:
   MonthsAgo:
-  YearsAgo:
+  LongTimeAgo:
   NoData:
   Oil:
   Coin:
