--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -740,8 +740,8 @@ AzurLaneUncensored:
 GameManager:
   AutoRestart: true
 GGHandler:
-  Enabled: false
-  GGFactorEnable: false
+  Enable: false
+  GGPopup: false
   RestartEverytime: true
   GGMultiplyingFactor: 200
   GGMethod:
