--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -573,6 +573,8 @@ SupplyPack:
     option: [ 0, 1, 2, 3, 4, 5, 6 ]
 Minigame:
   Collect: false
+DashboardUpdate:
+  Update: true
 
 # ==================== Daily ====================
 
@@ -634,11 +636,6 @@ Exercise:
   LowHpConfirmWait: 0.1
   OpponentRefreshValue: 0
   OpponentRefreshRecord: 2023-01-01 00:00:00
-
-DashboardUpdate:
-  Update:
-    value: all
-    option: [ all, main ]
 
 # ==================== Opsi ====================
 
@@ -742,11 +739,15 @@ GameManager:
 GGHandler:
   Enable: false
   GGPopup: false
-  RestartEverytime: true
+  RestartEverytime:
+    value: true
+    display: hide
   GGMultiplyingFactor: 200
   GGMethod:
+    type: state
     value: screenshot
     option: [ screenshot, ]
+    option_bold: screenshot
   GGAction: 
     value: auto
     option: [ auto, manual ]
@@ -782,73 +783,62 @@ Oil:
   Limit: 0
   Color:
     value: ^000000
-    display: hide
   Record: 2023-01-01 00:00:00
 Coin:
   Value: 0
   Limit: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^FFAA33
   Record: 2023-01-01 00:00:00
 Gem:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^FF3333
   Record: 2023-01-01 00:00:00
 Pt:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^00BFFF
   Record: 2023-01-01 00:00:00
 YellowCoin:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^FF8800
   Record: 2023-01-01 00:00:00
 PurpleCoin:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^7700BB
   Record: 2023-01-01 00:00:00
 ActionPoint:
   Value: 0
   Total: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^0000FF
   Record: 2023-01-01 00:00:00
 Merit:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^FFFF00
   Record: 2023-01-01 00:00:00
 Cube:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^33FFFF
   Record: 2023-01-01 00:00:00
 Core:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^AAAAAA
   Record: 2023-01-01 00:00:00
 Medal:
   Value: 0
   Color:
-    value: ^000000
+    value: ^FFDD00
     display: hide
   Record: 2023-01-01 00:00:00
 GuildCoin:
   Value: 0
   Color:
-    value: ^000000
-    display: hide
+    value: ^AAAAAA
   Record: 2023-01-01 00:00:00
