--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -351,7 +351,8 @@ Tool:
       - AzurLaneUncensored
     GameManager:
       - GameManager
-      - GGHandler
+    GGManager:
+      - GGManager
       - PowerLimit
 
 # ==================== Dashboard ====================
