GF: support hard mode

--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -279,6 +279,12 @@ GemsFarming:
     value: any
     option: [ any, favourite, aulick_or_foote , cassin_or_downes, z20_or_z21 ]
   CommissionLimit: true
+  HardVanguardIndex:
+    value: 0
+    option: [ 0, 1, 2 ]
+  HardFlagshipIndex:
+    value: 0
+    option: [ 0, 1, 2 ]
 CampaignStorage:
   Oil:
     stored: StoredOil
