--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -21,6 +21,7 @@ Alas:
       - OldRetire
     Restart:
       - Scheduler
+      - AutoRestart
 
 # ==================== Farm ====================
 
