大世界中路站桩

--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -295,6 +295,7 @@ Opsi:
       - Scheduler
       - OpsiAbyssal
       - OpsiFleetFilter
+      - OpsiFleet
     OpsiArchive:
       - Scheduler
       - OpsiFleet
@@ -302,6 +303,7 @@ Opsi:
       - Scheduler
       - OpsiStronghold
       - OpsiFleetFilter
+      - OpsiFleet
     OpsiMonthBoss:
       - Scheduler
       - OpsiMonthBoss
