--- a/module/config/argument/override.yaml
+++ b/module/config/argument/override.yaml
@@ -409,6 +409,9 @@ OpsiAbyssal:
     SuccessInterval: 60
     FailureInterval: 60
     ServerUpdate: 00:00, 12:00
+    OpsiFleet:
+    Fleet: 1
+    Submarine: true
 OpsiArchive:
   Scheduler:
     SuccessInterval: 60
@@ -419,6 +422,9 @@ OpsiStronghold:
     SuccessInterval: 60
     FailureInterval: 60
     ServerUpdate: 00:00
+  OpsiFleet:
+    Fleet: 1
+    Submarine: true
 OpsiMeowfficerFarming:
   Scheduler:
     SuccessInterval: 30
