紧急委托更高优先级按钮

--- a/module/config/argument/task.yaml
+++ b/module/config/argument/task.yaml
@@ -314,6 +314,7 @@ Opsi:
       - OpsiFleet
     OpsiHazard1Leveling:
       - Scheduler
+      - HigherPriority
       - OpsiHazard1Leveling
       - OpsiFleet
     OpsiCrossMonth:
