--- a/module/config/argument/argument.yaml
+++ b/module/config/argument/argument.yaml
@@ -781,6 +781,8 @@ OpsiMeowfficerFarming:
     option: [ 3, 4, 5, 6, 10 ]
   TargetZone:
     value: 0
+HigherPriority:
+    Enable: false
 OpsiHazard1Leveling:
   TargetZone:
     value: 0
